--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,15 +1,15 @@
 ---
-title: Round Icons
-subtitle: Graphic Design
+title: Straunian Information Agency
+subtitle: Global Game Jam 2018 Entry
 layout: default
 modal-id: 6
-date: 2014-07-15
-img: roundicons.png
+date: 03-2018
+img: siaPortrait.jpg
 thumbnail: roundicons-thumbnail.png
 alt: image-alt
-project-date: April 2014
+project-date: March 2018
 client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+category: Game Development
+description: S.I.A is a videogame that was developed at the 2018 Global Game Jam. In this resources management game, you are a public worker who have to decide which pieces of media are appropiate for mass consumption in a fascist country. With a bizarre sense of humor, you must take careful decisions to rally the support of the parts of society.
 
 ---
