--- a/_posts/2014-07-15-project-4.markdown
+++ b/_posts/2014-07-15-project-4.markdown
@@ -1,15 +1,14 @@
 ---
-title: Treehouse
-subtitle: Website Design
+title: Unión Croquética
+subtitle: Spain Game Devs Jam III Entry
 layout: default
 modal-id: 4
-date: 2014-07-15
-img: treehouse.png
-thumbnail: treehouse-thumbnail.png
+date: 10-2021
+img: unionCroquetica_thumbnail.png
+thumbnail: unionCroquetica_inGame.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+project-date: October 2021
+category: Game Development
+description: The croquets have decided to fight against their destiny, they wont be eaten again, and they have a plan. "Croquestimo" has born to safe the croquets and condemn humanity.
 
 ---
