--- a/_posts/2014-07-17-project-2.markdown
+++ b/_posts/2014-07-17-project-2.markdown
@@ -1,15 +1,14 @@
 ---
-title: Escape
-subtitle: Website Design
+title: The Hero's Journey Agency
+subtitle: GameGen Game Jam 2021 Entry
 layout: default
 modal-id: 2
-date: 2014-07-17
-img: escape.png
-thumbnail: escape-thumbnail.png
+date: 24-02-2021
+img: heroAgency_inGame.png
+thumbnail: heroAgency_portrait.png
 alt: image-alt
-project-date: April 2014
-client: Start Bootstrap
-category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+project-date: February 2021
+category: Game Development
+description: The Hero's Journey Agency is a time management game where you just got a job in the one and only Hero's Journey Agency, whose objective is to let people experience a miniature version of the Hero's journey.
 
 ---
