--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -5,7 +5,7 @@ layout: default
 modal-id: 5
 date: 02-2019
 img: towersoma_inGame.png
-thumbnail: towersona_thumbnail.jpeg
+thumbnail: towersona_thumbnail.png
 alt: image-alt
 project-date: February 2019
 category: Game Development
